--- a/AsociatiaDeTarani/AsociatiaDeTarani/AsociatiaDeTarani.csproj
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/AsociatiaDeTarani.csproj
@@ -5,7 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Images\" />
+    <Compile Remove="Images\**" />
+    <Content Remove="Images\**" />
+    <EmbeddedResource Remove="Images\**" />
+    <None Remove="Images\**" />
   </ItemGroup>
 
   <ItemGroup>
