--- a/AsociatiaDeTarani/AsociatiaDeTarani/AsociatiaDeTarani.csproj
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/AsociatiaDeTarani.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Views\ShoppingCart\Index.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.10">
